--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,7 +1,23 @@
 {
  "cells": [
   {
-
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# ARIMA and Seasonal ARIMA\n",
+    "\n",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "",
+    "\n",
+    ""
    ]
   },
   {
